<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cc_form_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ccf_vc_oprnl_deftct_pkts_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_no_of_defect_pkts"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_oprnl_deftct_pkts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ccf_vc_gp_admixture_desc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_admixture_desc"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_gp_admixture_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ccf_vc_gp_admixture_percent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_admixture_percent"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_gp_admixture_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ccf_vc_gp_off_type_desc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_off_type_desc"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_gp_off_type_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ccf_vc_gp_off_type_percent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_off_type_percent"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_gp_off_type_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ccf_vc_gm_below_std_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_germ_percents"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_gm_germ_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ccf_vc_gm_late_germ_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_late_germ_details"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_gm_late_germ_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ccf_vc_cp_pest_attack_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_pest_attack_details"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_cp_pest_attack_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ccf_vc_cp_dise_infest_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_disease_infestation_details"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_cp_dise_infest_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ccf_vc_rw_defect_pkts_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_no_of_defect_pkts"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_rw_defect_pkts_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ccf_vc_remarks_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ccf_remarks"
            android:textColor="@color/cc_form_black_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ccf_vc_remarks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/cc_form_black_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/ccf_vc_photo_first_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="10dp"
                android:text="Photo 1st"
                android:textColor="@color/cc_form_black_color"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ccf_vc_photo_first"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#c5c3c3" />

        <LinearLayout
            android:id="@+id/ccf_vc_photo_second_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="10dp"
                android:text="Photo 2nd"
                android:textColor="@color/cc_form_black_color"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ccf_vc_photo_second"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/ccf_vc_photo_third_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="10dp"
                android:text="Photo 3rd"
                android:textColor="@color/cc_form_black_color"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ccf_vc_photo_third"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#c5c3c3" />

        <LinearLayout
            android:id="@+id/ccf_vc_photo_fourth_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="10dp"
                android:text="Photo 4th"
                android:textColor="@color/cc_form_black_color"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ccf_vc_photo_fourth"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>