<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cc_form_background_color"
    android:orientation="vertical">

    <include layout="@layout/ccf_tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/ccf_new_complaint"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/cc_form_color_primary"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ccf_register" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/ccf_new_complaint"
                    android:textColor="@color/ccf_form_white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ccf_arrow_right_24" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ccf_view_my_complaint"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/cc_form_color_primary"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ccf_view" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/ccf_view_my_compliants"
                    android:textColor="@color/ccf_form_white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ccf_arrow_right_24" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ccf_ccf_pending_with_rbm"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/cc_form_color_primary"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ccf_view" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/ccf_pending_with_rbm"
                    android:textColor="@color/ccf_form_white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ccf_arrow_right_24" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ccf_first_activity_version_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="5dp"
        android:textColor="@color/cc_form_btn_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>